--- a/dingo/res/layout/lampada.xml
+++ b/dingo/res/layout/lampada.xml
@@ -9,8 +9,9 @@
 		<requestFocus></requestFocus>
 	</EditText>
 	<EditText android:inputType="number" android:layout_height="wrap_content" android:textColor="#000000" android:id="@+id/EDITLampadaQuartoPotencia" android:layout_width="181dp" android:layout_below="@+id/EDITLampadaQuartoTempo" android:layout_alignLeft="@+id/EDITLampadaQuartoTempo" android:layout_alignRight="@+id/EDITLampadaQuartoTempo"></EditText>
-	<Button android:id="@+id/BTLampadaQuartoVoltar" android:text="Voltar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentBottom="true" android:layout_alignParentRight="true"></Button>
+	<Button android:id="@+id/BTLampadaQuartoVoltar" android:text="Ok" android:layout_height="wrap_content" android:layout_width="70dp" android:layout_alignParentBottom="true" android:layout_alignParentRight="true"></Button>
 	<TextView android:layout_height="wrap_content" android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:textColor="#000000" android:text="Lâmpada" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"></TextView>
 	<TextView android:textColor="#000000" android:id="@+id/textView4" android:layout_height="wrap_content" android:text="Hrs/dia" android:layout_width="wrap_content" android:layout_alignBaseline="@+id/EDITLampadaQuartoTempo" android:layout_alignBottom="@+id/EDITLampadaQuartoTempo" android:layout_toRightOf="@+id/EDITLampadaQuartoTempo"></TextView>
 	<TextView android:textColor="#000000" android:id="@+id/textView5" android:layout_height="wrap_content" android:text="Watts" android:layout_width="wrap_content" android:layout_alignBaseline="@+id/EDITLampadaQuartoPotencia" android:layout_alignBottom="@+id/EDITLampadaQuartoPotencia" android:layout_toRightOf="@+id/EDITLampadaQuartoPotencia"></TextView>
+	<Button android:layout_width="70dp" android:layout_height="wrap_content" android:text="Limpar" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:id="@+id/BTLampadaQuartoLimpar"></Button>
 </RelativeLayout>
