--- a/dingo/res/layout/tvsala.xml
+++ b/dingo/res/layout/tvsala.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout android:id="@+id/AbsoluteLayout1" android:layout_width="fill_parent"
 	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/bgtv_sala">
-	<Button android:id="@+id/BTTVSalaVoltar" android:text="Voltar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentBottom="true" android:layout_alignParentRight="true"></Button>
+	<Button android:id="@+id/BTTVSalaVoltar" android:text="Ok" android:layout_height="wrap_content" android:layout_width="70dp" android:layout_alignParentBottom="true" android:layout_alignParentRight="true"></Button>
 	<TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:textColor="#000000" android:text="Potência:" android:layout_alignBaseline="@+id/EDITTVSalaPotencia" android:layout_alignBottom="@+id/EDITTVSalaPotencia" android:layout_alignParentLeft="true"></TextView>
 	<TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:textColor="#000000" android:text="Tempo de uso:" android:layout_alignBaseline="@+id/EDITTVSalaTempo" android:layout_alignBottom="@+id/EDITTVSalaTempo" android:layout_alignParentLeft="true"></TextView>
 	<EditText android:inputType="number" android:layout_height="wrap_content" android:textColor="#000000" android:id="@+id/EDITTVSalaTempo" android:layout_width="181dp" android:layout_below="@+id/textView2" android:layout_toRightOf="@+id/textView1" android:layout_marginTop="30dp" android:layout_toLeftOf="@+id/BTTVSalaVoltar">
@@ -13,4 +13,5 @@
 	<TextView android:inputType="number" android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_width="wrap_content" android:textColor="#000000" android:text="Quantidade:" android:layout_alignBaseline="@+id/EDITTVSalaQuant" android:layout_alignBottom="@+id/EDITTVSalaQuant" android:layout_alignParentLeft="true"></TextView>
 	<TextView android:textColor="#000000"  android:layout_width="wrap_content" android:id="@+id/textView4" android:layout_height="wrap_content" android:text="Hrs/dia" android:layout_alignBaseline="@+id/EDITTVSalaTempo" android:layout_alignBottom="@+id/EDITTVSalaTempo" android:layout_toRightOf="@+id/EDITTVSalaTempo"></TextView>
 	<TextView android:textColor="#000000" android:layout_width="wrap_content" android:id="@+id/textView5" android:layout_height="wrap_content" android:text="Watts" android:layout_alignBaseline="@+id/EDITTVSalaPotencia" android:layout_alignBottom="@+id/EDITTVSalaPotencia" android:layout_toRightOf="@+id/EDITTVSalaPotencia"></TextView>
+	<Button android:layout_width="70dp" android:layout_height="wrap_content" android:text="Limpar" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:id="@+id/BTTVSalaLimpar"></Button>
 </RelativeLayout>
