--- a/dingo/res/layout/ventilador.xml
+++ b/dingo/res/layout/ventilador.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout android:id="@+id/AbsoluteLayout1" android:layout_width="fill_parent"
 	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/bgventilador">
-	<Button android:id="@+id/BTVentiladorVoltar" android:text="Voltar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentBottom="true" android:layout_alignParentRight="true"></Button>
 	<TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:textColor="#000000" android:text="Potência:" android:layout_alignBaseline="@+id/EDITVentiladorPotencia" android:layout_alignBottom="@+id/EDITVentiladorPotencia" android:layout_alignParentLeft="true"></TextView>
 	<TextView android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_width="wrap_content" android:textColor="#000000" android:text="Quantidade:" android:layout_alignBaseline="@+id/EDITVentiladorQuant" android:layout_alignBottom="@+id/EDITVentiladorQuant" android:layout_alignParentLeft="true"></TextView>
 	<TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:textColor="#000000" android:text="Tempo de uso:" android:layout_alignBaseline="@+id/EDITVentiladorTempo" android:layout_alignBottom="@+id/EDITVentiladorTempo" android:layout_alignParentLeft="true"></TextView>
@@ -9,8 +8,9 @@
 	<EditText android:inputType="number" android:layout_height="wrap_content" android:textColor="#000000" android:id="@+id/EDITVentiladorPotencia" android:layout_width="181dp" android:layout_below="@+id/EDITVentiladorTempo" android:layout_alignLeft="@+id/EDITVentiladorTempo" android:layout_alignRight="@+id/EDITVentiladorTempo"></EditText>
 	<TextView android:layout_height="wrap_content" android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:textColor="#000000" android:text="Ventilador" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"></TextView>
 	<EditText android:inputType="number" android:layout_height="wrap_content" android:id="@+id/EDITVentiladorQuant" android:layout_width="181dp" android:layout_below="@+id/EDITVentiladorPotencia" android:layout_alignLeft="@+id/EDITVentiladorPotencia" android:layout_alignRight="@+id/EDITVentiladorPotencia">
-		<requestFocus></requestFocus>
 	</EditText>
 	<TextView android:textColor="#000000" android:layout_width="wrap_content" android:id="@+id/textView4" android:layout_height="wrap_content" android:text="Hrs/dia" android:layout_alignBaseline="@+id/EDITVentiladorTempo" android:layout_alignBottom="@+id/EDITVentiladorTempo" android:layout_toRightOf="@+id/EDITVentiladorTempo"></TextView>
 	<TextView android:textColor="#000000" android:layout_width="wrap_content" android:id="@+id/textView5" android:layout_height="wrap_content" android:text="Watts" android:layout_alignBaseline="@+id/EDITVentiladorPotencia" android:layout_alignBottom="@+id/EDITVentiladorPotencia" android:layout_toRightOf="@+id/EDITVentiladorPotencia"></TextView>
+	<Button android:layout_width="70dp" android:layout_height="wrap_content" android:text="Ok" android:id="@+id/BTVentiladorVoltar" android:layout_alignParentBottom="true" android:layout_alignParentRight="true"></Button>
+	<Button android:layout_width="70dp" android:layout_height="wrap_content" android:text="Limpar" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:id="@+id/BTVentiladorLimpar"></Button>
 </RelativeLayout>
