--- a/dingo/res/layout/ajuda.xml
+++ b/dingo/res/layout/ajuda.xml
@@ -5,8 +5,6 @@
   android:layout_width="fill_parent"
   android:layout_height="fill_parent" android:background="@drawable/bgajuda">
     <TextView android:layout_alignParentLeft="true" android:layout_marginLeft="3dp" android:layout_alignParentTop="true" android:layout_marginTop="6dp" android:textAppearance="?android:attr/textAppearanceMedium" android:text="Dingo - Simulador de Gastos Elétricos" android:textColor="#000000" android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_x="12dp" android:layout_y="8dp"></TextView>
-    <Button android:id="@+id/BTSobre" android:text="Sobre" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentBottom="true" android:layout_alignLeft="@+id/textView2"></Button>
-    <Button android:id="@+id/BTAjudaVoltar" android:text="Voltar" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentBottom="true" android:layout_alignParentRight="true"></Button>
     
 <LinearLayout android:id="@+id/LinearLayout01"
 xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@+id/BTSobre" android:layout_below="@+id/textView1">
@@ -25,4 +23,5 @@ android:orientation="vertical" android:layout_height="fill_parent">
 </LinearLayout>
 </ScrollView>
 </LinearLayout>
+<Button android:layout_height="wrap_content" android:text="Sobre" android:id="@+id/BTSobre" android:layout_width="wrap_content" android:layout_alignParentBottom="true" android:layout_alignParentRight="true"></Button>
 </RelativeLayout>
