--- a/dingo/res/layout/inicio.xml
+++ b/dingo/res/layout/inicio.xml
@@ -5,13 +5,11 @@
   android:layout_width="fill_parent"
   android:background="@drawable/bgcasa"
   android:layout_height="fill_parent" android:weightSum="1">
-    <Button android:layout_alignLeft="@+id/BTChamaSala" android:layout_below="@+id/BTChamaSala" android:layout_marginTop="3dp" android:id="@+id/BTChamaQuarto" android:text="Quarto" android:layout_height="55dp" android:layout_width="211dp" android:layout_x="57dp" android:layout_y="105dp"></Button>
     <TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:textColor="#000000" android:text="Selecionar Cômodo" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"></TextView>
-    <Button android:id="@+id/BTCalcular" android:text="Cálculos" android:layout_height="wrap_content" android:layout_width="100dp" android:layout_below="@+id/BTChamaBanheiro" android:layout_alignLeft="@+id/BTChamaBanheiro"></Button>
-    <Button android:id="@+id/BTVoltar" android:text="Voltar" android:layout_height="wrap_content" android:layout_width="100dp" android:layout_alignBaseline="@+id/BTCalcular" android:layout_alignBottom="@+id/BTCalcular" android:layout_alignRight="@+id/BTChamaBanheiro"></Button>
-    <Button android:id="@+id/BTChamaCozinha" android:text="Cozinha" android:layout_height="55dp" android:layout_width="211dp" android:layout_below="@+id/BTChamaQuarto" android:layout_alignLeft="@+id/BTChamaQuarto"></Button>
-    <Button android:id="@+id/BTChamaBanheiro" android:text="Banheiro" android:layout_height="55dp" android:layout_width="211dp" android:layout_below="@+id/BTChamaCozinha" android:layout_alignLeft="@+id/BTChamaCozinha"></Button>
     <Button android:id="@+id/BTChamaSala" android:text="Sala" android:layout_height="55dp" android:layout_width="211dp" android:layout_below="@+id/textView1" android:layout_alignLeft="@+id/textView1" android:layout_marginTop="34dp"></Button>
+    <Button android:layout_height="55dp" android:text="Banheiro" android:id="@+id/BTChamaBanheiro" android:layout_width="211dp" android:layout_below="@+id/BTChamaCozinha" android:layout_alignLeft="@+id/BTChamaCozinha" android:layout_marginTop="45dp"></Button>
+    <Button android:layout_height="55dp" android:text="Quarto" android:id="@+id/BTChamaQuarto" android:layout_width="211dp" android:layout_below="@+id/BTChamaSala" android:layout_alignLeft="@+id/BTChamaSala" android:layout_marginTop="35dp"></Button>
+    <Button android:layout_height="55dp" android:text="Cozinha" android:id="@+id/BTChamaCozinha" android:layout_width="211dp" android:layout_below="@+id/BTChamaQuarto" android:layout_alignLeft="@+id/BTChamaQuarto" android:layout_marginTop="43dp"></Button>
     
     
 </RelativeLayout>
