--- a/dingo/res/menu/menu.xml
+++ b/dingo/res/menu/menu.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/inicio"
-          android:icon="@drawable/dingo"
+          android:icon="@drawable/menu3"
           android:title="Início" />
     <item android:id="@+id/comodos"
-          android:icon="@drawable/dingo"
+          android:icon="@drawable/menu2"
           android:title="Cômodos" />
         <item android:id="@+id/calculos"
-          android:icon="@drawable/dingo"
+          android:icon="@drawable/menu4"
           android:title="Cálculos" />
         <item android:id="@+id/configs"
-          android:icon="@drawable/dingo"
+          android:icon="@drawable/menu5"
           android:title="Configurações" />
         <item android:id="@+id/ajuda"
-          android:icon="@drawable/dingo"
+          android:icon="@drawable/menu1"
           android:title="Ajuda" />
 </menu>
