--- a/dingo/res/layout/ajuda.xml
+++ b/dingo/res/layout/ajuda.xml
@@ -9,7 +9,7 @@
 <LinearLayout android:id="@+id/LinearLayout01"
 xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@+id/BTSobre" android:layout_below="@+id/textView1">
 <ScrollView android:id="@+id/ScrollView01"
-android:layout_width="fill_parent" android:layout_height="416dp">
+android:layout_width="fill_parent" android:layout_height="fill_parent">
 <LinearLayout android:id="@+id/LinearLayout02"
 android:layout_width="wrap_content"
 android:orientation="vertical" android:layout_height="fill_parent">
@@ -19,9 +19,11 @@ android:orientation="vertical" android:layout_height="fill_parent">
 <TextView android:layout_height="wrap_content" android:textColor="#000000" android:text="Quantidade (em unidades)." android:id="@+id/textView7" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_below="@+id/textView6" android:layout_alignLeft="@+id/textView6"></TextView>
 <TextView android:layout_height="wrap_content" android:textColor="#000000" android:text="Tarifa local:" android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_alignBaseline="@+id/EDITTarifa" android:layout_alignBottom="@+id/EDITTarifa" android:layout_alignLeft="@+id/textView1"></TextView>
 <TextView android:layout_height="wrap_content" android:textColor="#000000" android:text="Potência (em watts);" android:id="@+id/textView6" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_below="@+id/textView5" android:layout_alignLeft="@+id/textView5"></TextView>
-<TextView android:textColor="#000000" android:layout_height="wrap_content" android:text="- Os cálculos realizados são os mesmos que as empresas usam para calcular o consumo de seus clientes." android:id="@+id/textView8" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_below="@+id/textView7" android:layout_alignParentLeft="true" android:layout_marginTop="19dp"></TextView>  
+<TextView android:textColor="#000000" android:layout_height="wrap_content" android:text="- O resultado apresentado é apenas uma estimativa, podendo haver diferença em relação ao seu consumo real, devido às características específicas de cada equipamento." android:id="@+id/textView8" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_below="@+id/textView7" android:layout_alignParentLeft="true" android:layout_marginTop="19dp"></TextView>  
+
 </LinearLayout>
 </ScrollView>
 </LinearLayout>
 <Button android:layout_height="wrap_content" android:text="Sobre" android:id="@+id/BTSobre" android:layout_width="wrap_content" android:layout_alignParentBottom="true" android:layout_alignParentRight="true"></Button>
+<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="Fórmulas" android:layout_alignParentBottom="true" android:layout_toLeftOf="@+id/BTSobre" android:id="@+id/BTFormulas"></Button>
 </RelativeLayout>
