--- a/dingo/res/layout/barbeador.xml
+++ b/dingo/res/layout/barbeador.xml
@@ -34,8 +34,8 @@
 	<EditText android:inputType="number" android:layout_height="wrap_content"
 		android:textColor="#000000" android:id="@+id/EDITBarbeadorPotencia"
 		android:layout_width="181dp" android:layout_below="@+id/EDITBarbeadorTempo"
-		android:layout_alignLeft="@+id/textView2" android:text="10" android:layout_toLeftOf="@+id/BTBarbeadorVoltar">
-		<requestFocus></requestFocus>
+		android:layout_alignLeft="@+id/textView2"  android:layout_toLeftOf="@+id/BTBarbeadorVoltar">
+		
 	</EditText>
 
 	<EditText android:inputType="number" android:layout_height="wrap_content"
@@ -62,4 +62,5 @@
 		android:layout_height="wrap_content" android:text="Limpar" android:id="@+id/BTBarbeadorLimpar"
 		android:layout_alignParentBottom="true"
 		android:layout_alignParentLeft="true"></Button>
+	<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/BTSugestaoBarbeador" android:text="Valores sugeridos" android:layout_alignParentBottom="true" android:layout_toRightOf="@+id/textView1"></Button>
 </RelativeLayout>
