--- a/dingo/res/layout/batedeira.xml
+++ b/dingo/res/layout/batedeira.xml
@@ -1,17 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:id="@+id/AbsoluteLayout1" android:layout_width="fill_parent"
-	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/bgbatedeira">
-	<EditText android:inputType="number" android:layout_toRightOf="@+id/textView1" android:layout_marginLeft="1dp" android:layout_below="@+id/textView2" android:layout_marginTop="14dp" android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="181dp" android:layout_x="111dp" android:layout_y="54dp" android:id="@+id/EDITBatedeiraTempo" android:layout_toLeftOf="@+id/BTBatedeiraVoltar"></EditText>
-	<TextView android:layout_alignParentLeft="true" android:layout_marginLeft="3dp" android:layout_below="@+id/EDITBatedeiraPotencia" android:layout_marginTop="12dp" android:text="Quantidade:" android:layout_height="wrap_content" android:id="@+id/textView3" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="16dp" android:layout_y="184dp"></TextView>
-	<TextView android:layout_alignParentLeft="true" android:layout_marginLeft="3dp" android:layout_below="@+id/EDITBatedeiraTempo" android:layout_marginTop="12dp" android:text="Potência:" android:layout_height="wrap_content" android:id="@+id/textView1" android:textColor="#000000" android:layout_width="wrap_content" android:layout_x="20dp" android:layout_y="125dp"></TextView>
-	<TextView android:layout_height="wrap_content" android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:textColor="#000000" android:text="Batedeira" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"></TextView>
-	<Button android:id="@+id/BTBatedeiraVoltar" android:text="Ok" android:layout_height="wrap_content" android:textColor="#000000" android:layout_width="70dp"  android:layout_alignParentBottom="true" android:layout_alignParentRight="true"></Button>
-	<TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:textColor="#000000" android:text="Tempo de uso:" android:layout_alignBaseline="@+id/EDITBatedeiraTempo" android:layout_alignBottom="@+id/EDITBatedeiraTempo" android:layout_alignParentLeft="true"></TextView>
-	<EditText android:text="200" android:inputType="number" android:layout_height="wrap_content" android:id="@+id/EDITBatedeiraPotencia" android:layout_width="181dp" android:layout_below="@+id/textView1" android:layout_alignLeft="@+id/EDITBatedeiraTempo" android:layout_alignRight="@+id/EDITBatedeiraTempo">
-		
+<RelativeLayout android:id="@+id/AbsoluteLayout1"
+	android:layout_width="fill_parent" android:layout_height="fill_parent"
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:background="@drawable/bgbatedeira">
+	<EditText android:inputType="number" android:layout_toRightOf="@+id/textView1"
+		android:layout_marginLeft="1dp" android:layout_below="@+id/textView2"
+		android:layout_marginTop="14dp" android:textColor="#000000"
+		android:layout_height="wrap_content" android:layout_width="181dp"
+		android:layout_x="111dp" android:layout_y="54dp" android:id="@+id/EDITBatedeiraTempo"
+		android:layout_toLeftOf="@+id/BTBatedeiraVoltar"></EditText>
+	<TextView android:layout_alignParentLeft="true"
+		android:layout_marginLeft="3dp" android:layout_below="@+id/EDITBatedeiraPotencia"
+		android:layout_marginTop="12dp" android:text="Quantidade:"
+		android:layout_height="wrap_content" android:id="@+id/textView3"
+		android:textColor="#000000" android:layout_width="wrap_content"
+		android:layout_x="16dp" android:layout_y="184dp"></TextView>
+	<TextView android:layout_alignParentLeft="true"
+		android:layout_marginLeft="3dp" android:layout_below="@+id/EDITBatedeiraTempo"
+		android:layout_marginTop="12dp" android:text="Potência:"
+		android:layout_height="wrap_content" android:id="@+id/textView1"
+		android:textColor="#000000" android:layout_width="wrap_content"
+		android:layout_x="20dp" android:layout_y="125dp"></TextView>
+	<TextView android:layout_height="wrap_content" android:id="@+id/textView2"
+		android:textAppearance="?android:attr/textAppearanceLarge"
+		android:layout_width="wrap_content" android:textColor="#000000"
+		android:text="Batedeira" android:layout_alignParentTop="true"
+		android:layout_centerHorizontal="true"></TextView>
+	<Button android:id="@+id/BTBatedeiraVoltar" android:text="Ok"
+		android:layout_height="wrap_content" android:textColor="#000000"
+		android:layout_width="70dp" android:layout_alignParentBottom="true"
+		android:layout_alignParentRight="true"></Button>
+	<TextView android:layout_height="wrap_content" android:id="@+id/textView1"
+		android:layout_width="wrap_content" android:textColor="#000000"
+		android:text="Tempo de uso:" android:layout_alignBaseline="@+id/EDITBatedeiraTempo"
+		android:layout_alignBottom="@+id/EDITBatedeiraTempo"
+		android:layout_alignParentLeft="true"></TextView>
+	<EditText android:inputType="number" android:layout_height="wrap_content"
+		android:id="@+id/EDITBatedeiraPotencia" android:layout_width="181dp"
+		android:layout_below="@+id/textView1" android:layout_alignLeft="@+id/EDITBatedeiraTempo"
+		android:layout_alignRight="@+id/EDITBatedeiraTempo">
+
 	</EditText>
-	<EditText android:inputType="number" android:layout_height="wrap_content" android:textColor="#000000" android:id="@+id/EDITBatedeiraQuant" android:layout_width="181dp" android:layout_alignBaseline="@+id/textView3" android:layout_alignBottom="@+id/textView3" android:layout_alignLeft="@+id/EDITBatedeiraPotencia" android:layout_alignRight="@+id/EDITBatedeiraPotencia"></EditText>
-	<TextView android:textColor="#000000" android:id="@+id/textView4" android:layout_height="wrap_content" android:text="Hrs/dia" android:layout_width="wrap_content" android:layout_alignBaseline="@+id/EDITBatedeiraTempo" android:layout_alignBottom="@+id/EDITBatedeiraTempo" android:layout_toRightOf="@+id/EDITBatedeiraTempo"></TextView>
-	<TextView android:textColor="#000000" android:id="@+id/textView5" android:layout_height="wrap_content" android:text="Watts" android:layout_width="wrap_content" android:layout_alignBaseline="@+id/EDITBatedeiraPotencia" android:layout_alignBottom="@+id/EDITBatedeiraPotencia" android:layout_toRightOf="@+id/EDITBatedeiraPotencia"></TextView>
-	<Button android:layout_width="70dp" android:layout_height="wrap_content" android:text="Limpar" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:id="@+id/BTBatedeiraLimpar"></Button>
+	<EditText android:inputType="number" android:layout_height="wrap_content"
+		android:textColor="#000000" android:id="@+id/EDITBatedeiraQuant"
+		android:layout_width="181dp" android:layout_alignBaseline="@+id/textView3"
+		android:layout_alignBottom="@+id/textView3" android:layout_alignLeft="@+id/EDITBatedeiraPotencia"
+		android:layout_alignRight="@+id/EDITBatedeiraPotencia"></EditText>
+	<TextView android:textColor="#000000" android:id="@+id/textView4"
+		android:layout_height="wrap_content" android:text="Hrs/dia"
+		android:layout_width="wrap_content" android:layout_alignBaseline="@+id/EDITBatedeiraTempo"
+		android:layout_alignBottom="@+id/EDITBatedeiraTempo"
+		android:layout_toRightOf="@+id/EDITBatedeiraTempo"></TextView>
+	<TextView android:textColor="#000000" android:id="@+id/textView5"
+		android:layout_height="wrap_content" android:text="Watts"
+		android:layout_width="wrap_content" android:layout_alignBaseline="@+id/EDITBatedeiraPotencia"
+		android:layout_alignBottom="@+id/EDITBatedeiraPotencia"
+		android:layout_toRightOf="@+id/EDITBatedeiraPotencia"></TextView>
+	<Button android:layout_width="70dp" android:layout_height="wrap_content"
+		android:text="Limpar" android:layout_alignParentBottom="true"
+		android:layout_alignParentLeft="true" android:id="@+id/BTBatedeiraLimpar"></Button>
+	<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="Valores sugeridos" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:id="@+id/BTSugestaoBatedeira"></Button>
 </RelativeLayout>
