--- a/dingo/res/layout/configuracoes.xml
+++ b/dingo/res/layout/configuracoes.xml
@@ -3,7 +3,7 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
-  android:layout_height="fill_parent" android:background="@drawable/bgcasa">
+  android:layout_height="fill_parent" android:background="@drawable/dingo_set">
     <Button android:layout_width="70dp" android:layout_height="wrap_content" android:text="Ok" android:id="@+id/BTConfiguracoesVoltar" android:layout_alignParentBottom="true" android:layout_alignParentRight="true"></Button>
     <TextView android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView4" android:textAppearance="?android:attr/textAppearanceSmall" android:text="Energisa Paraíba - 0,37554" android:layout_below="@+id/textView3" android:layout_alignParentLeft="true"></TextView>
     <TextView android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView5" android:textAppearance="?android:attr/textAppearanceSmall" android:text="Companhia Energética de Pernambuco - 0,34427" android:layout_below="@+id/textView4" android:layout_alignParentLeft="true" android:layout_alignParentRight="true"></TextView>
