--- a/dingo/res/layout/lista_quarto.xml
+++ b/dingo/res/layout/lista_quarto.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout android:id="@+id/AbsoluteLayout1" android:layout_width="fill_parent"
-	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/bgcasa">
+	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/dingo_home">
 	<TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:textColor="#000000" android:text="Quarto" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"></TextView>
 	<TextView android:layout_height="wrap_content" android:id="@+id/TextView02" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:textColor="#000000" android:text="Ventilador" android:layout_above="@+id/BTChamaVentilador" android:layout_alignLeft="@+id/BTChamaVentilador"></TextView>
 	<TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="Pc" android:id="@+id/TextView01" android:textColor="#000000" android:layout_height="wrap_content" android:layout_above="@+id/BTChamaPC" android:layout_toRightOf="@+id/textView1"></TextView>
